--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.5",
+    "@fontsource/poppins": "^5.1.0",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tanstack/react-query": "^5.59.13",
+    "axios": "^1.7.7",
+    "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-icons": "^5.3.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
