--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
     "@fontsource/poppins": "^5.1.0",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.59.13",
     "axios": "^1.7.7",
@@ -18,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "stripe":"13.2.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
